Fixed angular editor in dark mode

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -11,3 +11,13 @@ body
 
 a
   cursor: pointer
+
+.angular-editor-toolbar,
+.angular-editor-toolbar-set,
+.angular-editor-button,
+.ae-font .ae-picker-options,
+.ae-font .ae-picker-label
+  --bs-bg-opacity: 1
+  --bs-text-opacity: 1
+  background-color: rgba(var(--bs-body-bg-rgb), var(--bs-bg-opacity)) !important
+  color: rgba(var(--bs-body-color-rgb), var(--bs-text-opacity))
